fix main page overflow issue

--- a/src/css/AppHeader.css
+++ b/src/css/AppHeader.css
@@ -1,6 +1,9 @@
 .root {
     flex-grow: 1;
-    width: 100%;
+    max-width: 100vw;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
 }
 
 .appbar {
