--- a/src/css/HotNews.css
+++ b/src/css/HotNews.css
@@ -2,10 +2,11 @@
 @import "~slick-carousel/slick/slick-theme.css";
 
 .slider-container {
-    margin-top: 40px;
+    margin-top: 54px;
     margin-bottom: 0;
     padding: 0;
     height: 40vh;
+    overflow: hidden;
 }
 
 .slider {
@@ -15,7 +16,6 @@
 .slider-item {
     position: relative;
     width: 100%;
-    height: 40vh;
 }
 
 .slider-image {
